src/grammar.txt
<expr> ::= <impl> "="  <expr> | <impl>
<impl> ::= <disj> "->" <impl> | <disj>
<disj> ::= <conj> "||" <disj> | <conj>
<conj> ::= <nega> "&&" <conj> | <nega>
<nega> ::= "!" <nega> | <atom>
<atom> ::= "1" | "0"  | [a-z0-9_]+ | "(" <expr> ")"
